git init 《独App》$ config tabbar

--- a/uni-app-du/manifest.json
+++ b/uni-app-du/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "uni-app-learning",
-    "appid" : "__UNI__A941D79",
+    "name" : "uni-app-du",
+    "appid" : "",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
