--- a/nest-blog-api/package.json
+++ b/nest-blog-api/package.json
@@ -20,11 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hasezoey/typegoose": "^6.0.0-32",
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/swagger": "^4.2.4",
+    "@types/mongoose": "^5.7.0",
     "fastify-swagger": "^2.5.0",
+    "mongoose": "^5.8.11",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
