--- a/nest-blog-api/package.json
+++ b/nest-blog-api/package.json
@@ -25,9 +25,14 @@
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/swagger": "^4.2.4",
+    "@typegoose/typegoose": "^6.3.0",
     "@types/mongoose": "^5.7.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "fastify-swagger": "^2.5.0",
     "mongoose": "^5.8.11",
+    "nestjs-mongoose-crud": "^1.2.2",
+    "nestjs-typegoose": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
