--- a/demos/typescript/react-with-typescript/package.json
+++ b/demos/typescript/react-with-typescript/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "source-map-loader": "^1.0.0"
