--- a/demos/typescript/typescript-learn/tsconfig.json
+++ b/demos/typescript/typescript-learn/tsconfig.json
@@ -9,7 +9,7 @@
     "jsx": "preserve", // 指定 jsx 代码的生成: 'preserve', 'react-native', or 'react'
     "declaration": true, // 生成相应的 '.d.ts' 文件
     "sourceMap": true, // 生成相应的 '.map' 文件
-    "outFile": "./", // 将输出文件合并为一个文件
+    // "outFile": "./", // 将输出文件合并为一个文件
     "outDir": "./", // 指定输出目录
     "rootDir": "./", // 用来控制输出目录结构 --outDir.
     "removeComments": true, // 删除编译后的所有的注释
@@ -41,8 +41,8 @@
 
     /* Source Map Options */
     "sourceRoot": "./", // 指定调试器应该找到 TypeScript 文件而不是源文件的位置
-    "mapRoot": "./", // 指定调试器应该找到映射文件而不是生成文件的位置
-    "inlineSourceMap": true, // 生成单个 soucemaps 文件，而不是将 sourcemaps 生成不同的文件
+    // "mapRoot": "./", // 指定调试器应该找到映射文件而不是生成文件的位置
+    // "inlineSourceMap": true, // 生成单个 soucemaps 文件，而不是将 sourcemaps 生成不同的文件
     "inlineSources": true, // 将代码与 sourcemaps 生成到一个文件中，要求同时设置了 --inlineSourceMap 或 --sourceMap 属性
 
     /* 其他选项 */
