--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "docs:dev": "vuepress dev docs ",
     "docs:build": "vuepress build docs"
   },
+  "keywords":[
+    "JavaScript高级程序设计 4 "
+  ],
   "devDependencies": {
     "vuepress": "^1.5.4"
   }
