--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   ],
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
+    "nodemon": "^2.0.9",
     "vitepress": "^0.14.0"
   },
   "scripts": {
+    "dev": "nodemon ./app.js",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs"
@@ -29,7 +31,7 @@
     }
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "serve-index": "^1.9.1"
+    "@koa/router": "^10.0.0",
+    "koa": "^2.13.1"
   }
 }
