--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "洋小洋同学"
   ],
   "devDependencies": {
-    "prettier": "^2.4.1"
-  },
-  "dependencies": {
+    "prettier": "^2.4.1",
     "vitepress": "1.0.0-alpha.35",
     "vue": "^3.2.45"
   }
