--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
+    "@antv/g2plot": "^2.4.23",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vitepress": "1.0.0-alpha.35",
