--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "front-end-poet",
-  "version": "2.0.0",
-  "description": "前端厚说变更为前端诗人",
+  "version": "0.0.1",
+  "description": "前端诗人",
   "repository": "https://github.com/yayxs/front-end-poet",
   "author": "vanlee",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "keywords": [
     "JavaScript",
@@ -29,13 +30,9 @@
     "洋小洋同学"
   ],
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "prettier": "^3.3.3"
   },
   "dependencies": {
-    "@antv/g2plot": "^2.4.23",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "vitepress": "1.0.0-alpha.35",
-    "vue": "^3.2.45"
+    "astro": "^4.13.3"
   }
 }
