--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "front-end-poet",
+  "type": "module",
   "version": "0.0.1",
   "description": "前端诗人",
   "repository": "https://github.com/yayxs/front-end-poet",
   "author": "vanlee",
   "license": "MIT",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "dev": "nuxt dev"
   },
   "keywords": [
     "JavaScript",
@@ -29,10 +27,8 @@
     "前端诗人",
     "洋小洋同学"
   ],
-  "devDependencies": {
-    "prettier": "^3.3.3"
-  },
   "dependencies": {
-    "astro": "^4.13.3"
+    "@nuxt/content": "^2.13.2",
+    "nuxt": "^3.12.4"
   }
 }
